--- a/build.properties
+++ b/build.properties
@@ -2,8 +2,8 @@
 # Properties file for build.xml
 #
 
-project.name = trike
-project.title = trike AS3 library
+project.name = Trike
+project.title = Trike AS3 library
 
 #
 # Version number for current releases
